<?xml version="1.0" encoding="UTF-8"?>
<!--
*
* Electric(tm) VLSI Design System
*
* File: pom.xml
*
* Copyright (c) 2012, Static Free Software. All rights reserved.
*
* Electric(tm) is free software; you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation; either version 3 of the License, or
* (at your option) any later version.
*
* Electric(tm) is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with this program.  If not, see http://www.gnu.org/licenses
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.java</groupId>
        <artifactId>jvnet-parent</artifactId>
        <version>5</version>
    </parent>

    <groupId>com.staticfreesoft</groupId>
    <artifactId>electric</artifactId>
    <version>9.08-fox</version>
    <packaging>jar</packaging>

    <name>electric</name>
    <description>
        Electric is an integrated-circuit design system that offers IC layout,
        schematic editing, and even textual hardware-description languages.
        It offers a wide range of synthesis and analysis tools for working on the circuitry.
        It has many importers and exporters for interfacing
        to other EDA (Electronic Design Automation) systems.
        It even has a constraint system for managing chip layout.
        For more information about Electric, see www.staticfreesoft.com
    </description>
    <url>http://staticfreesoft.com</url>
    <inceptionYear>1982</inceptionYear>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyMMdd_HHmm</maven.build.timestamp.format>
        <electric.buildDate>${maven.build.timestamp}</electric.buildDate>

        <appleJavaExtensionsVersion>1.4</appleJavaExtensionsVersion>
        <jmfVersion>2.1.1e</jmfVersion>
        <java3dVersion>1.3.1</java3dVersion>
        <beanshellVersion>2.0b4</beanshellVersion>
        <jythonVersion>2.7.0</jythonVersion>
        <junitVersion>4.10</junitVersion>
        <orgSlf4jVersion>1.7.7</orgSlf4jVersion>
        <scala.version>2.11.7</scala.version>
        <flatlafVersion>3.7</flatlafVersion>
    </properties>

    <scm>
        <connection>scm:svn:http://svn.savannah.gnu.org/svn/electric</connection>
        <developerConnection>scm:svn:svn://svn.savannah.gnu.org/electric</developerConnection>
        <url>http://svn.savannah.gnu.org/viewvc/?root=electric</url>
    </scm>

    <dependencies>
        <!-- Compilation Stubs -->
        <dependency>
            <groupId>com.apple</groupId>
            <artifactId>AppleJavaExtensions</artifactId>
            <version>${appleJavaExtensionsVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.media</groupId>
            <artifactId>jmf</artifactId>
            <version>${jmfVersion}</version>
            <!--scope>provided</scope-->
        </dependency>
        <dependency>
            <!-- Old Java3D - kept as provided for legacy plugin compilation -->
            <groupId>java3d</groupId>
            <artifactId>j3d-core-utils</artifactId>
            <version>${java3dVersion}</version>
            <scope>provided</scope>
        </dependency>
        <!-- JavaFX 3D (modern replacement for Java3D) -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>17.0.13</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>17.0.13</version>
        </dependency>
        <!-- Language Interpreters -->
        <dependency>
            <groupId>org.beanshell</groupId>
            <artifactId>bsh</artifactId>
            <version>${beanshellVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.python</groupId>
            <artifactId>jython</artifactId>
            <version>${jythonVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${orgSlf4jVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>${orgSlf4jVersion}</version>
        </dependency>
        <!-- Modern Look and Feel -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>${flatlafVersion}</version>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>${flatlafVersion}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junitVersion}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <sourceDirectory>electric-java</sourceDirectory>
        <resources>
            <resource>
                <directory>electric-java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.form</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>electric-scala</directory>
                <excludes>
                    <exclude>**/*.scala</exclude>
                </excludes>
            </resource>
        </resources>
        <testSourceDirectory>test</testSourceDirectory>
        <testResources>
            <testResource>
                <directory>test</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                    <exclude>**/*.form</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <release>17</release>
                    <showDeprecation>true</showDeprecation>
                    <compilerArgs>
                        <arg>-Xlint:unchecked</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <!-- Scala plugin disabled: incompatible with Java 21+
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <sourceDir>electric-scala</sourceDir>
                    <includes>
                        <include>**/*.scala</include>
                    </includes>
                </configuration>
            </plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.sun.electric.Launcher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.5</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>com.sun.electric.Launcher</mainClass>
                        </manifest>
                        <manifestEntries>
                            <Multi-Release>true</Multi-Release>
                        </manifestEntries>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.10.3</version>
                <configuration>
                    <maxmemory>2g</maxmemory>
                    <aggregate>true</aggregate>
                    <docfilessubdirs>true</docfilessubdirs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release-profile</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-assembly-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>single</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
            <!--reporting>
                <plugins>
                    <plugin>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>2.8</version>
                    </plugin>
                </plugins>
            </reporting-->
        </profile>
    </profiles>

</project>
